<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_modules</name>
  <version>1.0.0</version>
  <description>The MRS UAV Modules metapackage</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>mrs_utils</depend>
  <depend>mrs_uav_trajectory_loader</depend>
  <depend>mrs_uav_path_loader</depend>
  <depend>mrs_serial</depend>
  <depend>mrs_bumper</depend>
  <depend>mrs_pcl_tools</depend>
  <depend>mrs_modules_msgs</depend>

  <depend>aloam_slam</depend>
  <depend>nimbro_network</depend>

</package>
